Fix that stupid spacing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,7 +3,6 @@ h1, h2, h3, h4, p, ul {
 }
 .root {
     margin:0;
-    max-width: 1800;
     width:100%;
     background: #5d5c61;
 }
@@ -73,8 +72,7 @@ h1, h2, h3, h4, p, ul {
 .preview_card h2 {
     margin:4vh;
     font-family: "brandon-grotesque","HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande","sans-serif";
-    font-size: 5vh;
-    font-weight: 200;
+    font-weight: lighter;
     background: #c38d9e;
 }
 .preview_card p {
